--- a/project/scroll.html
+++ b/project/scroll.html
@@ -4,11 +4,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>scroll</title>
+    <title>滚动事件</title>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            font-size: 16px;
+        }
+
+        div {
+            height: 300px;
+            margin-top: 20px;
+        }
+
+        div:nth-of-type(1) {
+            margin-top: 0;
+            background-color: #f00;
+        }
+
+        div:nth-of-type(2) {
+            background-color: #0f0;
+        }
+
+        div:nth-of-type(3) {
+            background-color: #00f;
+        }
+
+        div:nth-of-type(4) {
+            background-color: #ff0;
+        }
+
+        div:nth-of-type(5) {
+            background-color: #f0f;
+        }
+
+        div:nth-of-type(6) {
+            background-color: #0ff;
+        }
+
+        ul {
+            display: flex;
+            flex-direction: column;
+            float: right;
+            /* position: absolute; */
+            text-align: center;
+        }
+
+        ul li {
+            list-style: none;
+            font-size: 16px;
+            width: 70px;
+            height: 70px;
+            line-height: 70px;
+            background-color: #fee;
+        }
+    </style>
 </head>
 
 <body>
-    <div>添加</div>
+    <div>
+        <ul>
+            <li><a href="#">跳转1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+        </ul>
+    </div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <script>
+        function createGreeting(name) {
+            const greeting = `Hello, ${Name}!`;
+            return greeting;
+        }
+
+        const helloChris = createGreeting("Chris");
+
+        console.log(helloChris);
+
+    </script>
 </body>
 
 </html>
