--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>主页</title>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+        }
+
+        div {
+            width: 500px;
+            height: 300px;
+            margin: 50px auto;
+            background-color: #343;
+        }
+
+        a {
+            width: 70px;
+            height: 30px;
+            line-height: 30px;
+        }
+    </style>
+
 </head>
 
 <body>
     <div>
+        <span>事件</span>
         <a href="./project/priceding.html">事件案例</a>
         <a href="./project/scroll.html">滚动案例</a>
     </div>
